# analyst-agent

./: .gitignore  Makefile  README.md  chatkit.sqlite  pyproject.toml
.claude/commands/: research.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
src/: config.py  main.py  server.py
src/datastore/: __init__.py  attachment_store.py  sqlite_store.py
static/: chat.js  index.html  styles.css
